# well-regards

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json
.github/workflows/: codeql.yml  pylint.yml
backend/: Dockerfile  download_model.py  image_descriptor.py  main.py  pyproject.toml  read_image.py  requirements.txt  ssd_mobilenet_v3_large_coco_2020_01_14.pbtxt
backend/tests/: description_tests.py  test_database.py  test_image.py  test_image_description.py
frontend/: Dockerfile  nginx.conf  package.json
postgresql/: init.sql
