[project]
name = "Well-Regards-Backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "alembic==1.12.1",
    "bcrypt==4.1.2",
    "black==24.8.0",
    "fastapi==0.115.0",
    "flake8==7.1.0",
    "google-generativeai==0.8.0",
    "httpx>=0.27.0,<0.28.0",
    "imageio==2.35.0",
    "mypy==1.11.0",
    "numpy>=1.26.0,<2.0.0",
    "opencv-python==4.10.0.84",
    "orjson==3.10.0",
    "passlib[bcrypt]==1.7.4",
    "pillow>=10.0.0,<11.0.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.9.0",
    "pydantic-settings==2.5.0",
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
    "pytest-cov>=4.1.0",
    "python-dateutil==2.9.0",
    "python-dotenv==1.0.0",
    "python-engineio>=4.8.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "python-socketio==5.11.0",
    "redis==5.0.8",
    "requests==2.32.3",
    "sqlalchemy==2.0.23",
    "structlog==24.4.0",
    "supabase==2.7.0",
    "ultralytics>=8.3.228",
    "uvicorn[standard]==0.32.0",
    "websockets==13.1",
]
